# blog

django-blog/: pyproject.toml  pytest.ini
django-blog/django_blog/django_blog/: settings.py
django-blog/tests/: test_auth_moduels_user.py
