[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = ""
authors = ["Pablo de la Cuesta <pablodelacuestagarcia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
django = "5.1.1"
django-types = "^0.19.1"
django-stubs-ext = "^5.0.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
